@@ -1,4 +1,5 @@
 0.14
+ - Add missing random_day_year() method.
  - Improve constructor doc.
  - Regen README file.
  - Update Module::Install to 1.21 version.
